# chess-B

./: .gitignore  README.md  You are Trae Builder.md  pyproject.toml
otbtagreview/: cli.py
otbtagreview/pipeline/: board.py  engine.py  mapping.py  moves.py  review.py  states.py  tags.py  video.py
otbtagreview/tools/: build_piece_map.py  calibrate_board.py  generate_aruco_sheet.py
otbtagreview/web/: index.html
